--- a/style.css
+++ b/style.css
@@ -1,3 +1,90 @@
-.cont1{
-    
+body {
+	display: flex;
+	justify-content: center;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+div.principal {
+	border-style: inset;
+}
+
+div.cont1 {
+	display: flex;
+	height: 65px;
+}
+
+h1 {
+	margin: 25px 170px 10px 15px;
+	font-size: 30px;
+}
+
+img {
+	margin-top: 10px;
+	width: 50px;
+	height: 55px;
+}
+
+/* --------------------------------------------------------------------------- */
+div.cont2 {
+	display: inline-flex;
+	flex-wrap: wrap;
+}
+
+div.p1 {
+	margin: 20px 0px 0px 17px;
+	font-size: 18px;
+	text-align: justify;
+	width: 250px;
+}
+
+form {
+	margin: 0px 0px 0px 45px;
+}
+
+input {
+	text-decoration: underline;
+	border-style: none;
+	margin-top: 15px;
+	color: gray;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+	font-size: 20px;
+}
+
+div.p2 {
+	position: relative;
+	top: 110px;
+	right: 67%;
+	width: 250px;
+	font-size: 18px;
+}
+
+div.p3 {
+	margin: 0px 0px 0px 0px;
+	font-size: 18px;
+	text-align: justify;
+	width: 250px;
+}
+
+div.cont3 {
+	width: 250px;
+	height: 20px;
+	margin: 0px 0px 0px 17px;
+}
+
+div.cont4 {
+	position: relative;
+	top: 60px;
+	left: 35%;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+button {
+	border-style: inherit;
+	background-color: rgb(212, 208, 208);
+	height: 35px;
+	font-size: 15px;
+}
+
+button:hover {
+	cursor: pointer;
 }
