--- a/style.css
+++ b/style.css
@@ -1,90 +1,62 @@
 body {
-	display: flex;
-	justify-content: center;
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+	text-align: center;
+	position: relative;	
 }
 
-div.principal {
-	border-style: inset;
-}
-
-div.cont1 {
+.cont1{
 	display: flex;
-	height: 65px;
 }
 
-h1 {
-	margin: 25px 170px 10px 15px;
-	font-size: 30px;
+h1,img{
+	inset: 0;
+	margin: auto;
 }
 
-img {
-	margin-top: 10px;
-	width: 50px;
-	height: 55px;
+img{
+	width: 80px;
+	height: 70px;
+	padding-right: 390px;
 }
 
-/* --------------------------------------------------------------------------- */
-div.cont2 {
-	display: inline-flex;
+h1{
+	padding-left: 250px;
+}
+
+.cont2{
+	display:inline-flex;
 	flex-wrap: wrap;
 }
 
-div.p1 {
-	margin: 20px 0px 0px 17px;
-	font-size: 18px;
+p{
+	box-sizing: border-box;
+	width:350px;
+	margin:30px 50px 0px 0px;
 	text-align: justify;
-	width: 250px;
+	padding:0px 0px 0px 5px;		
+	word-spacing: 0px;
+	font-size: 18px;
 }
 
-form {
-	margin: 0px 0px 0px 45px;
+form{
+margin:30px 110px 0px 0px;
+font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-input {
-	text-decoration: underline;
-	border-style: none;
-	margin-top: 15px;
+input{
+	margin: 10px 0px 0px 0px;
+	font-size: 17px;
 	color: gray;
+	border-top: 0px;
+	border-right: 0;
+	border-left: 0;
+}
+
+button{
+	margin: 25px 0px;
+	height: 40px;
+	border: none;
+	background-color: rgb(179, 175, 175);
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-	font-size: 20px;
-}
-
-div.p2 {
-	position: relative;
-	top: 110px;
-	right: 67%;
-	width: 250px;
-	font-size: 18px;
-}
-
-div.p3 {
-	margin: 0px 0px 0px 0px;
-	font-size: 18px;
-	text-align: justify;
-	width: 250px;
-}
-
-div.cont3 {
-	width: 250px;
-	height: 20px;
-	margin: 0px 0px 0px 17px;
-}
-
-div.cont4 {
-	position: relative;
-	top: 60px;
-	left: 35%;
-	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-button {
-	border-style: inherit;
-	background-color: rgb(212, 208, 208);
-	height: 35px;
-	font-size: 15px;
-}
-
-button:hover {
-	cursor: pointer;
+	font-size: 17px;
 }
